--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,9 @@
             href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
             rel="stylesheet"
         />
-        <title>Blue Wifi</title>
+        <title>
+            Blue Wifi | Super Fast, Consistant and Great Internet from R20 a Day
+        </title>
     </head>
 
     <body>
